Added Wallet API and themes
